--- a/style.css
+++ b/style.css
@@ -1,192 +1,101 @@
-*{                   /* jo browser ki editing hoti hai usko hmny khatm krdi */
+*{     /* is sy jo browser khod krta ha styling wo nhi kry ga */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-html,body{
-    line-height: 1.4;
-    font-size: 300;
+body{
+    background-color: antiquewhite;  /* background-color hoga change */
 }
-.hero_section{
-    background-color: rgb(196, 168, 127);
-}
-.hero_section{
-    background-image: url(images/background1.webp);
-    min-height: 100vh;   /* background picture ka size brh jaiga */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 800px;
-}
-h2{     /* "Hi, I am John Doe" is pr kam ho rha hai  */
-    font-size: 65px;
-    color: rgb(123, 93, 58);
-    -webkit-text-stroke: 1px black;   /* hi i am ka border ho jaiga black  */
+.container{
+    max-width: 900px;
+    margin: 0 auto;
 }
 
-.john{
-    margin: 0 26px;
-    color: rgb(123, 93, 58);
-    text-transform: uppercase;
-    -webkit-text-stroke: 1px black;   /* john ka border ho jaiga black  */
-}
-.deo{
-    margin: 0 42px;
-    color: rgb(123, 93, 58);
-    text-transform: uppercase;
-    -webkit-text-stroke: 1px black;  /* deo ka border ho jaiga black  */
-
-}
-
-.full{
-    text-align: right;
-    margin: 0 66px;
-    font-size: 37px;
-    color: rgb(123, 93, 58);
-    -webkit-text-stroke: 1px black;  /* full ka border ho jaiga black  */
-}
-.stack{
-    text-align: right;
-    margin: 0 52px;
-    font-size: 37px;
-    color: rgb(123, 93, 58);
-    -webkit-text-stroke: 1px black;  /* stack ka border ho jaiga black  */
-}
-.Developer{
-    text-align: right;
-    margin: 0 7px;
-    font-size: 35px;
-    color: rgb(123, 93, 58);
-    -webkit-text-stroke: 1px black;  /* Developer ka border ho jaiga black  */
-}
-.my_section{                        /* my section ka background ho jaiga black */
-    background-color: black;
-    padding: 10px;   /* issy  black box bara ho jaiga */
-}
-
-.my_section h1{                   /* "The work, i can do for" is pr kam ho rha hai */
-    color: white;
-    font-size: 48px;
-    text-transform: uppercase;
-    letter-spacing: 1.2px;
-    text-align: center;
-}
- .my_section h1 span{               /*you pr km ho rha ha */
-    font-size: 90px;
-    color: rgb(123, 93, 58);
-
-}
-
-.image_container1{      /*  apps wali picture pr kam ho rha hai */
-    background-image: url("images/app1.webp");
-    background-position:left;
-    background-repeat: no-repeat;
-    min-height: 50vh;            /* isy height kam ya ziada hogi */
-    background-size: 400px;   /* issy picture ka size hoga kam ziada */
-
-}
-
-.image_container2{                 /*  web wali picture pr kam ho rha hai */
-    background-image: url("images/web.webp");
-    background-position:left;
-    background-repeat: no-repeat;
-    min-height: 50vh;            /* isy height kam ya ziada hogi */
-    background-size: 400px;   /* issy picture ka size hoga kam ziada */
-
-}
-/*  uiux wali picture pr kam ho rha hai */
-.image2_container3{
-    background-image: url("images/uiux.webp");
-    background-position:left;
-    background-repeat: no-repeat;
-    min-height: 50vh;            /* isy height kam ya ziada hogi */
-    background-size: 400px;   /* issy picture ka size hoga kam ziada */
-
-
-
-}
-.work1{
-    padding: 0 2%;
-    
-
-     
-}
-.card1{
-    
-    max-width: 350px;
-    height: 400px;
+.apply_box{
+    max-width: 600px;  /* white job application web waly box pr kam kr rhy hain*/
+    padding: 20px;    
+    background-color: white;
+    margin: 0 auto;
+    margin-top: 50px;  /* white job app waly box ko upr sy space mily ga */
+    box-shadow: 4px 3px 5px;  /*  is box ko dy rhy hain shadow 4px dy rhy x-axis sy 3px dy rhy hain y-axis sy and 5px dy rhy hain z-axis sy */
     border-radius: 10px;
-    box-shadow: 3px 5px 5px black;
-    background-color: rgb(196, 168, 127);
+}
+.title_small{
+    font-size: 20px;
+}
+.form_container{    /* pory form pr apply hoga ye  */
+    margin-top: 20px;  /* "job application (we) " k nichy space a jaygi */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));   /* pory form ko hmny auto fit kr diya ha or  minmax(200px, 1fr) iska mtlb hai k agr jga hotu form space lely 200px or agr jga nhi hotu form spcae ly 1fr    */
+    gap: 20px;     /* sub k darmiyan main 20px ki space a jaygi */
 }
 
-.work2{
-    padding:0 36%;
-    
-}
-.card2{
-   
-   max-width: 350px;
-   height: 400px;
-   border-radius: 10px;
-   box-shadow: 3px 5px 5px black;
-   background-color: rgb(196, 168, 127);
+.form_control{                  /* is ki help sy sary name upr aingy or un k boxes nichy */
+    display: flex;            
+    flex-direction: column;
 }
 
-.work3{
-    padding-left: 70%;
-    
-}
-.card3{
-   
-   max-width: 350px;
-   height: 400px;
-   border-radius: 10px;
-   box-shadow: 3px 5px 5px black;
-   background-color: rgb(196, 168, 127);
-}
-
-.colour_section2{
-    background-image: url("images/background2.webp");
-    background-position:center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-p{
-    text-align:center;
-}
-h3{
-    text-align: center;
-    text-transform: uppercase;
-}
-.black_line{       /*about k sth black line a jaygi*/
-    color: white;
-    background-color: black;
+label{
+    font-size: 15px;    /* sry name yani k First Name, Last Name ye jo sub likhy huy hain inka size chota ho jaig */
+    margin-bottom: 5px;    /* sry name yani k First Name, Last Name ye jo sub likhy huy hain insub k nichy a jaigi space*/
 
 }
 
-.about{
-    color: white;
-    margin: 0 10%;
-    text-transform: uppercase;
-}
-li{                            /*  lists pr kam ho rha hai */
-    color: black;
-    font-size: large;
-    margin: 0 10%;
-
-}
-h4{
-    color: black;
-    font-size: large;
-    margin: 0 8%;
-
-}
-.about_colour{
-    background-color:rgb(196, 168, 127);
+input,select,textarea {      /* hm input, select and textarea 3no pr ek sth kam kr rhy  hain */
+    padding: 6px 10px;
+    border: 1px solid gray;  /* border ko 1px diya hai or sary boxex k border ka color kr diya hai grey */
+    border-radius: 4px;
+    font-size: 15px;   /* plceholders ka font size hai ye  */
 }
 
-.t{       /* t pr kam ho rha ha */
-    color:rgb(123, 93, 58);
-    -webkit-text-stroke: 1px black;   /* T ka border ho jaiga black  */
-    font-size: 180%;
+input:focus{
+    outline-color:antiquewhite; /* jis hm kisi bhi box pr click kren k tu uski outline ka color light peach type ka aiga */
 }
+textarea:focus{
+    outline-color:antiquewhite;    /* textarea wly box ki bhi outline ho jaigi light peach */
+
+}
+
+#job_role{                                  /*  for class dot      for id # */
+     outline-color:antiquewhite; /*job role ki bhi outline krdi hai hmny light peach */
+
+}
+
+.button_container{
+    display: flex;
+    justify-content: end;      /* apply now button ko hm ny left end pr kr diya hai */
+    margin-top: 20px;       /* apply now waly buttuon k uper a jaygi space */
+
+}
+
+button{
+    background-color: red;       /* button ka color ho jaiga red */
+    border: transparent solid 2px;     /* is sy border hut jaiga */
+    padding: 5px 10px;
+    color:white;   /* button ka text jo hai apply now wo ho jaiga white */
+    border-radius: 8px;
+    transition: 0.3s ease-in;
+}
+
+button:hover{           /*  jub button pr hover kregy tu ye sub apply hoga */
+    background-color:#ccc;    
+    border: 2px solid red;
+    color: black;   /* jub hover kregy tu apply now ka color ho jaiga black */
+    transition: 0.3s ease-out;
+    cursor: pointer;
+}
+
+.textarea_control {
+    grid-column: 1 / span 2;
+  }
+.textarea_control textarea {
+    width: 100%;
+  } 
+@media (max-width: 460px) {
+    .textarea_control {
+      grid-column: 1 / span 1;
+    }
+  } ;
+  
+  
+  
