--- a/style.css
+++ b/style.css
@@ -1,101 +1,100 @@
-*{     /* is sy jo browser khod krta ha styling wo nhi kry ga */
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    background-color: antiquewhite;  /* background-color hoga change */
-}
-.container{
-    max-width: 900px;
-    margin: 0 auto;
+
+.container{      /* background-color ko change krny k liye lkn is sy side m color reh jta hai */
+    background-color: darkgray;
+    min-height: 100vh;
+    border: 10px solid black;
 }
 
-.apply_box{
-    max-width: 600px;  /* white job application web waly box pr kam kr rhy hain*/
-    padding: 20px;    
-    background-color: white;
-    margin: 0 auto;
-    margin-top: 50px;  /* white job app waly box ko upr sy space mily ga */
-    box-shadow: 4px 3px 5px;  /*  is box ko dy rhy hain shadow 4px dy rhy x-axis sy 3px dy rhy hain y-axis sy and 5px dy rhy hain z-axis sy */
-    border-radius: 10px;
+*{       /* is ki help sy pory background-color pr color ho jaiga */
+    margin: 0;
+    padding: 0%;
+    box-sizing: border-box;
+    
 }
-.title_small{
+
+.content{
+    max-width: 900px;
+    padding: 0 auto;
+}
+
+.image_container,img{
+    margin: 5px 70px;      /* is sy picture thori nichy a jaigi */
+    height: 200px;      /* Dr a.qadeer khan ki picture ko chota kia hai*/
+    max-width: 200px;       /*Dr a.qadeer khan ki picture ko chota kia hai */
+    border-radius: 100px;     /* img k border ko round kr diya*/
+    
+}
+.top_section{
+    margin-top: 100px;
+    display: flex;     /* "Dr. Abdul Qadeer Khan 1936-2021" a jaiga right side ki taraf */
+    justify-content: space-between;  /* is sy text hmara ho jaiga darmiyan m */
+    text-transform: uppercase;   /* "Dr. Abdul Qadeer Khan" ko uppercase kr dega */
+    align-items: flex-end;   /* "Dr. Abdul Qadeer Khan 1936-2021" a jaiga bottom m  */
+} 
+.top_section h1{      /*  "Dr. Abdul Qadeer Khan 1936-2021" pr kam kr rhy hain */
+    font-size: 42px;
+    font-weight: bold;
+    color: black;
+}
+
+.top_section h4{
+    text-align: end;   /* "(1936-2021)" ye ho jaiga left corner pr */
+}
+
+
+.about-section h2{
+    font-size: 33px;    /* "Benefactor of Pakistan" iska size prh jaiga */
+   font-weight: 40px;    /* "Benefactor of Pakistan" ye bold ho jaiga */
+   margin: 25px 105px;     /*  "Benefactor of Pakistan" is k nihcy space a jaigi */
+   
+
+}
+.about-section p{
+    font-size: 20px;       /* paragraph ka font size brh jaiga */
+    line-height: 30px;      /* paragraph ki ines ki space brh jaigi */
+    letter-spacing: 1.1px;   /* paragraph k hr word k letters ki space prh jaigi */
+    text-align: justify;
+    margin: 25px 145px;
+
+}
+.early-life h2{
+    font-size: 33px;
+    font-weight: 40px;
+    margin-left: 105px;
+    margin-bottom: 25px;
+}
+
+.early-life p{
+    font-size: 20px;            /* paragraph ka font size brh jaiga */
+    line-height: 30px;         /* paragraph ki ines ki space brh jaigi */
+    letter-spacing: 1.1px;   /* paragraph k hr word k letters ki space prh jaigi */
+    text-align: justify;
+    margin: 25px 145px;
+}
+.biography-section{
+    margin:50px 0;   /* "biography" k upr space a jaigi */
+}
+
+.biography-section h3{
+    margin-bottom: 25px;   /* -"biography" k nichy  a jaigi space */
+    margin-left: 105px;
+    font-size: 33px;
+}
+.biography-section ul{ 
+    margin-left: 180px;    /* ul pr kam kr rhy hain */
     font-size: 20px;
 }
-.form_container{    /* pory form pr apply hoga ye  */
-    margin-top: 20px;  /* "job application (we) " k nichy space a jaygi */
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));   /* pory form ko hmny auto fit kr diya ha or  minmax(200px, 1fr) iska mtlb hai k agr jga hotu form space lely 200px or agr jga nhi hotu form spcae ly 1fr    */
-    gap: 20px;     /* sub k darmiyan main 20px ki space a jaygi */
+.biography-section li{
+    margin-bottom: 10px;    /* lists k nichy space a jaigi */
+    font-size: 20px;
+    letter-spacing: 1.1px;
+    line-height: 30px;
+    
+}
+footer{
+    margin: 30px 0;   /* footer ko upr or nichy sy space dedi hai */
 }
 
-.form_control{                  /* is ki help sy sary name upr aingy or un k boxes nichy */
-    display: flex;            
-    flex-direction: column;
+footer p{
+    text-align: end;
 }
-
-label{
-    font-size: 15px;    /* sry name yani k First Name, Last Name ye jo sub likhy huy hain inka size chota ho jaig */
-    margin-bottom: 5px;    /* sry name yani k First Name, Last Name ye jo sub likhy huy hain insub k nichy a jaigi space*/
-
-}
-
-input,select,textarea {      /* hm input, select and textarea 3no pr ek sth kam kr rhy  hain */
-    padding: 6px 10px;
-    border: 1px solid gray;  /* border ko 1px diya hai or sary boxex k border ka color kr diya hai grey */
-    border-radius: 4px;
-    font-size: 15px;   /* plceholders ka font size hai ye  */
-}
-
-input:focus{
-    outline-color:antiquewhite; /* jis hm kisi bhi box pr click kren k tu uski outline ka color light peach type ka aiga */
-}
-textarea:focus{
-    outline-color:antiquewhite;    /* textarea wly box ki bhi outline ho jaigi light peach */
-
-}
-
-#job_role{                                  /*  for class dot      for id # */
-     outline-color:antiquewhite; /*job role ki bhi outline krdi hai hmny light peach */
-
-}
-
-.button_container{
-    display: flex;
-    justify-content: end;      /* apply now button ko hm ny left end pr kr diya hai */
-    margin-top: 20px;       /* apply now waly buttuon k uper a jaygi space */
-
-}
-
-button{
-    background-color: red;       /* button ka color ho jaiga red */
-    border: transparent solid 2px;     /* is sy border hut jaiga */
-    padding: 5px 10px;
-    color:white;   /* button ka text jo hai apply now wo ho jaiga white */
-    border-radius: 8px;
-    transition: 0.3s ease-in;
-}
-
-button:hover{           /*  jub button pr hover kregy tu ye sub apply hoga */
-    background-color:#ccc;    
-    border: 2px solid red;
-    color: black;   /* jub hover kregy tu apply now ka color ho jaiga black */
-    transition: 0.3s ease-out;
-    cursor: pointer;
-}
-
-.textarea_control {
-    grid-column: 1 / span 2;
-  }
-.textarea_control textarea {
-    width: 100%;
-  } 
-@media (max-width: 460px) {
-    .textarea_control {
-      grid-column: 1 / span 1;
-    }
-  } ;
-  
-  
-  
