--- a/style.css
+++ b/style.css
@@ -1,100 +1,115 @@
-
-.container{      /* background-color ko change krny k liye lkn is sy side m color reh jta hai */
-    background-color: darkgray;
-    min-height: 100vh;
-    border: 10px solid black;
+.bg1{
+    background-image: url("images/background.webp");
+    min-height: 558px;    
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-*{       /* is ki help sy pory background-color pr color ho jaiga */
-    margin: 0;
-    padding: 0%;
-    box-sizing: border-box;
-    
+.conquer{
+    margin:0 23%;
+    text-transform: uppercase;
+    font-size: 38px;
+    color:white;
+    -webkit-text-stroke: 1px black;
 }
 
-.content{
-    max-width: 900px;
-    padding: 0 auto;
+.world{
+    font-size:65px;
+    color:black;
+    -webkit-text-stroke:1px white
 }
-
-.image_container,img{
-    margin: 5px 70px;      /* is sy picture thori nichy a jaigi */
-    height: 200px;      /* Dr a.qadeer khan ki picture ko chota kia hai*/
-    max-width: 200px;       /*Dr a.qadeer khan ki picture ko chota kia hai */
-    border-radius: 100px;     /* img k border ko round kr diya*/
-    
+.education{                    /* education wali heading pr kam hora hai */
+    font-size: 30px;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
 }
-.top_section{
-    margin-top: 100px;
-    display: flex;     /* "Dr. Abdul Qadeer Khan 1936-2021" a jaiga right side ki taraf */
-    justify-content: space-between;  /* is sy text hmara ho jaiga darmiyan m */
-    text-transform: uppercase;   /* "Dr. Abdul Qadeer Khan" ko uppercase kr dega */
-    align-items: flex-end;   /* "Dr. Abdul Qadeer Khan 1936-2021" a jaiga bottom m  */
-} 
-.top_section h1{      /*  "Dr. Abdul Qadeer Khan 1936-2021" pr kam kr rhy hain */
-    font-size: 42px;
-    font-weight: bold;
-    color: black;
-}
-
-.top_section h4{
-    text-align: end;   /* "(1936-2021)" ye ho jaiga left corner pr */
-}
-
-
-.about-section h2{
-    font-size: 33px;    /* "Benefactor of Pakistan" iska size prh jaiga */
-   font-weight: 40px;    /* "Benefactor of Pakistan" ye bold ho jaiga */
-   margin: 25px 105px;     /*  "Benefactor of Pakistan" is k nihcy space a jaigi */
-   
+.e{                            /* n pr kam ho rha hai */
+    font-size: 40px;
+    color:cornflowerblue;
+    -webkit-text-stroke:1px black;
 
 }
-.about-section p{
-    font-size: 20px;       /* paragraph ka font size brh jaiga */
-    line-height: 30px;      /* paragraph ki ines ki space brh jaigi */
-    letter-spacing: 1.1px;   /* paragraph k hr word k letters ki space prh jaigi */
-    text-align: justify;
-    margin: 25px 145px;
-
-}
-.early-life h2{
-    font-size: 33px;
-    font-weight: 40px;
-    margin-left: 105px;
-    margin-bottom: 25px;
-}
-
-.early-life p{
-    font-size: 20px;            /* paragraph ka font size brh jaiga */
-    line-height: 30px;         /* paragraph ki ines ki space brh jaigi */
-    letter-spacing: 1.1px;   /* paragraph k hr word k letters ki space prh jaigi */
-    text-align: justify;
-    margin: 25px 145px;
-}
-.biography-section{
-    margin:50px 0;   /* "biography" k upr space a jaigi */
-}
-
-.biography-section h3{
-    margin-bottom: 25px;   /* -"biography" k nichy  a jaigi space */
-    margin-left: 105px;
-    font-size: 33px;
-}
-.biography-section ul{ 
-    margin-left: 180px;    /* ul pr kam kr rhy hain */
+.para1{
     font-size: 20px;
 }
-.biography-section li{
-    margin-bottom: 10px;    /* lists k nichy space a jaigi */
-    font-size: 20px;
-    letter-spacing: 1.1px;
-    line-height: 30px;
-    
+.types{
+    font-size: 25px;
+    text-transform: uppercase;
 }
-footer{
-    margin: 30px 0;   /* footer ko upr or nichy sy space dedi hai */
+.para2{                  /* formal eng k para pr kam hoa rha ha */
+    line-height: 5.0%;
+    margin-bottom: 3%;
+}
+.para3{                  /* informal eng k para pr kam hoa rha ha */
+    line-height: 5.0%;
 }
 
-footer p{
-    text-align: end;
+.bg2{
+    background-image: url("images/bg2.webp");
+    min-height:558px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.importance{
+    font-size: 35px;
+    margin-left: 330px;
+    color:white;
+    -webkit-text-stroke: 1px black;
+    text-transform: uppercase;
+}
+.education1{
+    font-size: 54px;
+    color:black;
+    -webkit-text-stroke: 1px white;
+}
+.importanceofeducation{
+    font-size:  44px;
+    text-transform: uppercase;
+}
+
+ .text2education{         /*importance of education waly education pr kam ho rha ha */
+    font-size: 55px;
+    letter-spacing: 1.4px;
+    color:cornflowerblue;
+    -webkit-text-stroke:1px black;
+
+}
+.para4,.para5{
+    font-size: 20px;
+    text-align: justify;
+}
+
+.bg3{
+    background-image: url("images/bg3.webp");
+    min-height:558px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.power{
+    font-size: 40px;
+    margin-left: 330px;
+    color: white;
+    -webkit-text-stroke: 1px black;
+    text-transform: uppercase;
+
+}
+.powerpower{
+    font-size: 54px;
+    color:black;
+    -webkit-text-stroke: 1px white;
+}
+.EmpoweringMind{
+    font-size: 40px;
+    text-transform: uppercase;
+}
+
+.empower{
+    font-size: 55px;
+    color:cornflowerblue;
+    -webkit-text-stroke:1px black;
 }
